--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "hardhat-project",
+  "version": "1.0.0",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^4.3.2",
+    "@pwnfinance/multitoken": "^1.0.1",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.5",
     "hardhat": "^2.6.1"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.3.1"
   }
 }
