--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "hardhat-project",
+  "name": "token-bundler",
   "version": "1.0.0",
+  "scripts": {
+    "test": "npx hardhat test"
+  },
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
