--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "test": "npx hardhat test"
   },
+  "author": "PWN Finance",
+  "license": "MIT",
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
