--- a/package.json
+++ b/package.json
@@ -1,11 +1,32 @@
 {
-  "name": "token-bundler",
+  "name": "@pwnfinance/token-bundler",
   "version": "1.0.0",
+  "description": "Enables to bundle ERC20, ERC721, ERC1155 into a single ERC1155 token.",
   "scripts": {
     "test": "npx hardhat test"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PWNFinance/TokenBundler.git"
+  },
+  "keywords": [
+    "solidity",
+    "ethereum",
+    "token",
+    "ERC",
+    "bundler",
+    "bundle"
+  ],
+  "files": [
+    "contracts/ITokenBundler.sol",
+    "contracts/TokenBundler.sol"
+  ],
   "author": "PWN Finance",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/PWNFinance/TokenBundler/issues"
+  },
+  "homepage": "https://github.com/PWNFinance/TokenBundler#readme",
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
