--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.2",
-    "@pwnfinance/multitoken": "^1.0.1",
+    "@pwnfinance/multitoken": "^1.0.3",
     "chai": "^4.3.4",
+    "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.5",
     "hardhat": "^2.6.1"
