--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.5",
-    "hardhat": "^2.6.1"
+    "hardhat": "2.9.1"
   }
 }
