--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-ETHERSCAN_API_KEY=<api_key>
-RINKEBY_URL=https://rinkeby.infura.io/v3/<key>
 DEPLOY_PRIVATE_KEY_TESTNET=<private_key>
 DEPLOY_PRIVATE_KEY_LOCAL=<private_key>
+
+GOERLI_URL=<url>
+
+ETHERSCAN_API_KEY=<api_key>
