Make token bundle ownership contract ownable and implement function for owner to update ownership token metadata

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
-DEPLOY_PRIVATE_KEY_TESTNET=<private_key>
+DEPLOY_PRIVATE_KEY_MAINNET=<private_key>
 DEPLOY_PRIVATE_KEY_LOCAL=<private_key>
 
-GOERLI_URL=<url>
+ETHEREUM_URL=<url>
 
 ETHERSCAN_API_KEY=<api_key>
+POLYGONSCAN_API_KEY=<api_key>
+
+PWN_DAO=<pwn_dao_address>
+METADATA_URI=<token_bundle_ownership_metadata_uri>
+TOKEN_BUNDLE_OWNERSHIP_CONTRACT=<token_bundle_ownership_contract_address>
